@@ -19,11 +19,12 @@ package org.apache.ranger.audit.provider;
  * under the License.
  */
 
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.ranger.audit.utils.RangerAuditWriter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 import java.util.Properties;
 
@@ -81,8 +82,8 @@ public class AuditWriterFactory {
         RangerAuditWriter ret = null;
         try {
             Class<RangerAuditWriter> cls = (Class<RangerAuditWriter>) Class.forName(writerClass);
-            ret = cls.newInstance();
-        } catch (Exception e) {
+            ret = cls.getDeclaredConstructor().newInstance();
+        } catch (NoSuchMethodException | InvocationTargetException | InstantiationException | IllegalAccessException e) {
             throw e;
         }
         if (logger.isDebugEnabled()) {
