@@ -177,7 +177,7 @@ public class KMSACLs implements Runnable, KeyACLs {
       }
     } catch (Exception ex) {
       LOG.warn(
-          String.format("Could not reload ACLs file: '%s'", ex.toString()), ex);
+			  "Could not reload ACLs file: '%s'".formatted(ex.toString()), ex);
     }
   }
 
@@ -249,9 +249,9 @@ public class KMSACLs implements Runnable, KeyACLs {
     if (!KMSWebApp.getACLs().hasAccess(aclType, ugi, clientIp)) {
       KMSWebApp.getUnauthorizedCallsMeter().mark();
       KMSWebApp.getKMSAudit().unauthorized(ugi, operation, key);
-      throw new AuthorizationException(String.format(
+      throw new AuthorizationException((
           (key != null) ? UNAUTHORIZED_MSG_WITH_KEY
-                        : UNAUTHORIZED_MSG_WITHOUT_KEY,
+						: UNAUTHORIZED_MSG_WITHOUT_KEY).formatted(
           ugi.getShortUserName(), operation, key));
     }
   }
