@@ -25,24 +25,24 @@ import java.util.List;
 import java.util.ArrayList;
 import java.util.HashMap;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.DefaultValue;
-import javax.ws.rs.DELETE;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.WebApplicationException;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.Response;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.DefaultValue;
+import jakarta.ws.rs.DELETE;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.PUT;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.QueryParam;
+import jakarta.ws.rs.WebApplicationException;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.Response;
 
-import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.ranger.biz.RangerBizUtil;
 import org.apache.ranger.biz.SessionMgr;
 import org.apache.ranger.biz.XUserMgr;
@@ -920,7 +920,7 @@ public class XUserREST {
 		if (usersDeleted == 1) {
 			response = "1 user deleted successfully.";
 		} else if (usersDeleted > 0) {
-			response = String.format("%d users deleted successfully.", usersDeleted);
+			response = "%d users deleted successfully.".formatted(usersDeleted);
 		}
 		return Response.ok(response).build();
 	}
@@ -956,7 +956,7 @@ public class XUserREST {
 		if (groupsDeleted == 1) {
 			response = "1 group deleted successfully.";
 		} else if (groupsDeleted > 0) {
-			response = String.format("%d groups deleted successfully.", groupsDeleted);
+			response = "%d groups deleted successfully.".formatted(groupsDeleted);
 		}
 		return Response.ok(response).build();
 	}
