@@ -52,8 +52,8 @@ import javax.naming.ldap.Rdn;
 import javax.naming.ldap.StartTlsRequest;
 import javax.naming.ldap.StartTlsResponse;
 
-import org.apache.commons.collections.MapUtils;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.collections4.MapUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.thirdparty.com.google.common.collect.HashBasedTable;
 import org.apache.hadoop.thirdparty.com.google.common.collect.Table;
 import org.apache.ranger.ugsyncutil.util.UgsyncCommonConstants;
@@ -627,9 +627,7 @@ public class LdapUserGroupBuilder implements UserGroupSource {
 					Control[] controls = ldapContext.getResponseControls();
 					if (controls != null) {
 						for (int i = 0; i < controls.length; i++) {
-							if (controls[i] instanceof PagedResultsResponseControl) {
-								PagedResultsResponseControl prrc =
-										(PagedResultsResponseControl)controls[i];
+							if (controls[i] instanceof PagedResultsResponseControl prrc) {
 								total = prrc.getResultSize();
 								if (total != 0) {
 									if (LOG.isDebugEnabled()) {
@@ -651,7 +649,7 @@ public class LdapUserGroupBuilder implements UserGroupSource {
 					// Re-activate paged results
 					if (pagedResultsEnabled)   {
 						if (LOG.isDebugEnabled()) {
-							LOG.debug(String.format("Fetched paged results round: %s", ++paged));
+							LOG.debug("Fetched paged results round: %s".formatted(++paged));
 						}
 						ldapContext.setRequestControls(new Control[]{
 								new PagedResultsControl(pagedResultsSize, cookie, Control.CRITICAL) });
@@ -811,9 +809,7 @@ public class LdapUserGroupBuilder implements UserGroupSource {
 						Control[] controls = ldapContext.getResponseControls();
 						if (controls != null) {
 							for (int i = 0; i < controls.length; i++) {
-								if (controls[i] instanceof PagedResultsResponseControl) {
-									PagedResultsResponseControl prrc =
-											(PagedResultsResponseControl)controls[i];
+								if (controls[i] instanceof PagedResultsResponseControl prrc) {
 									total = prrc.getResultSize();
 									if (total != 0) {
 										if (LOG.isDebugEnabled()) {
@@ -835,7 +831,7 @@ public class LdapUserGroupBuilder implements UserGroupSource {
 						// Re-activate paged results
 						if (pagedResultsEnabled)   {
 							if (LOG.isDebugEnabled()) {
-								LOG.debug(String.format("Fetched paged results round: %s", ++paged));
+								LOG.debug("Fetched paged results round: %s".formatted(++paged));
 							}
 							ldapContext.setRequestControls(new Control[]{
 									new PagedResultsControl(pagedResultsSize, cookie, Control.CRITICAL) });
@@ -1005,9 +1001,7 @@ public class LdapUserGroupBuilder implements UserGroupSource {
 						Control[] controls = ldapContext.getResponseControls();
 						if (controls != null) {
 							for (int i = 0; i < controls.length; i++) {
-								if (controls[i] instanceof PagedResultsResponseControl) {
-									PagedResultsResponseControl prrc =
-											(PagedResultsResponseControl)controls[i];
+								if (controls[i] instanceof PagedResultsResponseControl prrc) {
 									total = prrc.getResultSize();
 									if (total != 0) {
 										if (LOG.isDebugEnabled()) {
@@ -1239,9 +1233,7 @@ public class LdapUserGroupBuilder implements UserGroupSource {
 						Control[] controls = ldapContext.getResponseControls();
 						if (controls != null) {
 							for (int i = 0; i < controls.length; i++) {
-								if (controls[i] instanceof PagedResultsResponseControl) {
-									PagedResultsResponseControl prrc =
-											(PagedResultsResponseControl)controls[i];
+								if (controls[i] instanceof PagedResultsResponseControl prrc) {
 									total = prrc.getResultSize();
 									if (total != 0) {
 										if (LOG.isDebugEnabled()) {
@@ -1263,7 +1255,7 @@ public class LdapUserGroupBuilder implements UserGroupSource {
 						// Re-activate paged results
 						if (pagedResultsEnabled)   {
 							if (LOG.isDebugEnabled()) {
-								LOG.debug(String.format("Fetched paged results round: %s", ++paged));
+								LOG.debug("Fetched paged results round: %s".formatted(++paged));
 							}
 							ldapContext.setRequestControls(new Control[]{
 									new PagedResultsControl(pagedResultsSize, cookie, Control.CRITICAL) });
